# CUHK-Wired-Network-Auto-Login

./: .gitignore  README.md  cuhk wired network auto login.cmd  cuhk wired network auto login.py  pyproject.toml
credential/: credential.json
function testing/: 0. requests.py  1. check internet connection.py  2. print current date time.py  3. desktop notification.py  4. system tray.py  5. time calculation.py
